--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "mongodb": "^6.19.0",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.20.0",
     "puppeteer-extra": "^3.3.6",
