--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 ATLAS_URI="mongodb+srv://caleb:Poopoopeepee123!@cluster0.5oiw1w7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT=8080
+IP="0.0.0.0"
