added another url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amazon-webscraper",
+  "name": "my-skincare-routine-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
